json renders correctly

--- a/app/views/static_pages/humanity_dashboard.html.erb
+++ b/app/views/static_pages/humanity_dashboard.html.erb
@@ -3,7 +3,5 @@
 <h1 class='page-header'>
   Humanity United Dashboard
 </h1>
-<%= puts @geocodes.to_json %>
 
-
-<%= render partial: 'static_pages/humanity_dashboard_js.html.erb', locals: {geocodes: @geocodes} %>
+<%= render partial: 'static_pages/humanity_dashboard_js.html.erb' %>
