--- a/app/views/static_pages/_humanity_dashboard_js.html.erb
+++ b/app/views/static_pages/_humanity_dashboard_js.html.erb
@@ -38,37 +38,46 @@
 </div>
 <%= javascript_tag "var feature_collection=#{@feature_collection.to_json}"%>
 <script>
-    var tiles = L.tileLayer('http://otile{s}.mqcdn.com/tiles/1.0.0/map/{z}/{x}/{y}.jpeg', {
+    var MapQuest = L.tileLayer('http://otile{s}.mqcdn.com/tiles/1.0.0/map/{z}/{x}/{y}.jpeg', {
                 attribution: 'Tiles by <a href="http://www.mapquest.com/">MapQuest</a> &mdash; Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>',
-                subdomains: '1234'
+                subdomains: '1234',
+                noWrap:true
             }),
             acled = L.mapbox.tileLayer('miranda-lv.qz9nqaor', {
-                detectRetina: true
+                detectRetina: true,
+                noWrap:true
             }),
-            poverty = L.mapbox.tileLayer('miranda-lv.di996bt9'),
-            popheat = L.mapbox.tileLayer('miranda-lv.nyyi7ldi'),
+            poverty = L.mapbox.tileLayer('miranda-lv.di996bt9', {
+                noWrap:true
+            }),
+            popheat = L.mapbox.tileLayer('miranda-lv.nyyi7ldi', {
+                noWrap:true
+            }),
             usgs = L.tileLayer.wms("http://mrdata.usgs.gov/services/mrds", {
                 version: '1.1.1',
                 service: 'WMS',
                 request: 'GetMap',
                 layers: 'mrds',
                 format: 'image/png',
-                BBOX: '-34.91600946474834188,-38.30268242782449306,76.58592204818674531,40.01734898427328346',
-                SRS: 'EPSG:4326',
                 STYLE: 'default',
                 transparent: 'true',
-                attribution: "USGS MRDS @ http://tin.er.usgs.gov/mrds/"
+                attribution: "USGS MRDS @ http://tin.er.usgs.gov/mrds/",
+                noWrap:true
             }),
-            map = L.map('map')
-                    .setView([6.964039, 19.533678], 3)
-                    .addLayer(tiles), //follow: true
+            map = L.map('map', {
+                maxBounds: [[51.17934297928927,67.1484375],[-41.50857729743933,-28.125]],
+                center: [6.964039, 19.533678],
+                zoom:3,
+                minZoom:3,
+                maxZoom:14,
+                layers:MapQuest
+            }),
             none_val = "No base layer",
             pov_val = "Poverty",
             acled_val = "Armed conflict",
             pop_val = "Population density",
             usgs_val = "Mineral deposits",
             featurelen = feature_collection===null?[]:feature_collection.features.length,
-            i = 0,
             MarkerOptions = {
             radius: 4,
             fillColor: "#9FE5F8",
@@ -76,12 +85,11 @@
             weight: 1,
             opacity: 1,
             fillOpacity: 0.5};
-    for(i=0;i<featurelen;i++){
-        if(feature_collection.features[i].geometry.coordinates.length==2){L.geoJson(feature_collection.features[i], {
-            pointToLayer: function (feature, latlng) {
-                return L.circleMarker(latlng, MarkerOptions);
-            }
-        }).addTo(map);}};
+    L.geoJson(feature_collection.features, {
+        pointToLayer: function (feature, latlng) {
+            return L.circleMarker(latlng, MarkerOptions);
+        }
+    }).addTo(map);
     $(document).ready(function(){
         $('#base_layer').change(function(){
             var selected_layer = $("#base_layer option:selected").val();
