Fixed legend clipping problem

--- a/app/views/static_pages/_humanity_dashboard_js.html.erb
+++ b/app/views/static_pages/_humanity_dashboard_js.html.erb
@@ -14,6 +14,8 @@
     #searchresults {float:right;position:relative;right:20px; top:-31px;border:solid #1c273b 1px;height:629px;width:18%;}
     h4 {margin-left:5px;}
     #base_layer {margin-left: 4%;margin-right: 4%; margin-bottom: 13px;width: 90%;}
+    #layercontrol {padding:1px;}
+    #layercontrol {padding:1px;}
     #layercontrol img{display:none;}
 </style>
 <div id="vis">
