--- a/app/views/static_pages/_humanity_dashboard_js.html.erb
+++ b/app/views/static_pages/_humanity_dashboard_js.html.erb
@@ -103,13 +103,19 @@
         }
     });
     map.addLayer(geoJson);
-    function filterGeoJson(attribute, value){
-        if(attribute===undefined && value===undefined){
+    function filterGeoJson(attributes, values){
+        if(attributes===undefined && values===undefined){
             geoJson.options.filter = undefined;
         }
         else{
             geoJson.options.filter = function(feature,layer){
-                return feature.properties[attribute] == value;
+                var filterBoolean = 1,
+                        attrlen = attributes.length,
+                        i=0;
+                for(i=0;i<attrlen;i++){
+                    filterBoolean = filterBoolean && feature.properties[attributes[i]] == values[i]
+                };
+                return filterBoolean;
             };
         }
         geoJson.clearLayers()
