No more horizontal scroll bar

--- a/app/views/static_pages/_humanity_dashboard_js.html.erb
+++ b/app/views/static_pages/_humanity_dashboard_js.html.erb
@@ -11,6 +11,7 @@
     #left {float:left;width:18%}
     #layercontrol {display:none;float:left;position:relative;top:-30px;border:solid #1c273b 1px;height:auto;width:100%;padding:1px;margin-bottom:1px;}
     #filtercontrol {float:left;position:relative;top:-30px;border:solid #1c273b 1px;height:626px;width:100%;padding:1px;overflow-y:scroll;}
+    #filtercontrol ol, #filtercontrol ul {margin:0 0 10px 10px;}
     #searchresults {float:right;position:relative;right:20px; top:-30px;border:solid #1c273b 1px;height:626px;width:18%;padding:1px;}
     h4 {margin-left:5px;}
     #layercontrol img{display:none;}
